<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_ml3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/ml3"
        app:layout_constraintStart_toEndOf="@+id/label_price3"
        app:layout_constraintTop_toTopOf="@+id/label_price3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ml3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ml" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_price3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/price3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/label_price2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_ml2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/ml2"
        app:layout_constraintStart_toEndOf="@+id/label_price2"
        app:layout_constraintTop_toTopOf="@+id/label_price2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ml2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ml" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_price2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/price2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/label_price1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_price1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/price1"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_ml1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/ml1"
        app:layout_constraintStart_toEndOf="@+id/label_price1"
        app:layout_constraintTop_toTopOf="@+id/label_price1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ml1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ml" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/final1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description_finalPrice"
        android:text="@string/textView_final"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/label_ml1"
        app:layout_constraintTop_toTopOf="@+id/label_price1" />

    <TextView
        android:id="@+id/final2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description_finalPrice"
        android:text="@string/textView_final"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/label_ml2"
        app:layout_constraintTop_toTopOf="@+id/label_price2" />

    <TextView
        android:id="@+id/final3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description_finalPrice"
        android:text="@string/textView_final"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/label_ml3"
        app:layout_constraintTop_toTopOf="@+id/label_price3" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_price1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_price2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_price3" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#6200EA"
        android:contentDescription="@string/description_button"
        android:shadowColor="#4A148C"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_price3" />

</androidx.constraintlayout.widget.ConstraintLayout>